objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>LeadOwner__c</fullName>
        <description>SFDC-3209 - Created to display Lead Owner Name on Related List View</description>
        <formula>IF( LEFT(Lead.OwnerId, 3) = &apos;005&apos;, 
Lead.Owner:User.FullName__c,
Lead.Owner:Queue.QueueName 
)</formula>
        <label>Lead Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadStatus__c</fullName>
        <description>SFDC-3209 - Created to display Lead Status on Related List View</description>
        <formula>TEXT(Lead.Status)</formula>
        <label>Lead Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>Legacy Id unique created for Migration purpose</description>
        <externalId>true</externalId>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>LegacyID created for migration purpose to track legacy ID</description>
        <externalId>true</externalId>
        <inlineHelpText>LegacyId from legacy system</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>Legacy System fields created for migration purpose</description>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PKIDCampaignMember__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>CmM{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID CampaignMember</label>
        <type>AutoNumber</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>